--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
+
 $breakpoint-mobile: 375px;
 $breakpoint-desktop: 1440px;
+$font-sans-serif: "Barlow", sans-serif;
+$font-serif: "Fraunces", serif;
+// primary colours
+$colour-soft-red: hsl(7, 99%, 70%);
+$colour-yellow: hsl(51, 100%, 49%);
+$dark-desaturated-cyan: hsl(167, 40%, 24%);
+$dark-blue: hsl(198, 62%, 26%);
+$dark-moderate-cyan: hsl(168, 34%, 41%);
+// neutral colours
+$very-dark-desaturated-blue: hsl(212, 27%, 19%);
+$very-dark-grayish-blue: hsl(213, 9%, 39%);
+$dark-grayish-blue: hsl(232, 10%, 55%);
+$grayish-blue: hsl(210, 4%, 67%);
+$white: hsl(0, 0%, 100%);
 
 body {
   font-size: 18px;
