--- a/style/style.css
+++ b/style/style.css
@@ -2,5 +2,56 @@
 body {
   font-size: 18px;
 }
+body nav {
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+body nav #logo {
+  width: 20%;
+}
+body nav ul#nav-items {
+  width: 80%;
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+}
+body nav ul#nav-items li {
+  margin: 0 15px;
+  padding: 10px;
+}
+body nav ul#nav-items li a {
+  color: white;
+  text-decoration: none;
+  font-family: "Barlow", sans-serif;
+  font-weight: 700;
+}
+body nav ul#nav-items li a.contact-btn {
+  color: #23303e;
+  background-color: white;
+  padding: 15px 30px;
+  border-radius: 25px;
+  text-transform: uppercase;
+  font-family: "Fraunces", serif;
+  font-weight: 600;
+}
+body nav ul#nav-items li a.contact-btn:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
+}
+body section#hero {
+  height: 100vh;
+  width: 100vw;
+  background: url("../images/desktop/image-header.jpg") no-repeat;
+  background-size: cover;
+}
+body section#hero h1#hero-headline {
+  text-transform: uppercase;
+  font-family: "Fraunces", serif;
+  font-weight: 600;
+  color: white;
+}
 
 /*# sourceMappingURL=style.css.map */
