--- a/style/style.scss
+++ b/style/style.scss
@@ -19,6 +19,57 @@ $white: hsl(0, 0%, 100%);
 
 body {
   font-size: 18px;
+  nav {
+    padding: 15px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    #logo {
+      width: 20%;
+    }
+    ul#nav-items {
+      width: 80%;
+      display: flex;
+      justify-content: flex-end;
+      list-style: none;
+      li {
+        margin: 0 15px;
+        padding: 10px;
+        a {
+          color: $white;
+          text-decoration: none;
+          font-family: $font-sans-serif;
+          font-weight: 700;
+          &.contact-btn {
+            color: $very-dark-desaturated-blue;
+            background-color: $white;
+            padding: 15px 30px;
+            border-radius: 25px;
+            text-transform: uppercase;
+            font-family: $font-serif;
+            font-weight: 600;
+            &:hover {
+              cursor: pointer;
+              background-color: rgba($white, 0.3);
+              color: $white;
+            }
+          }
+        }
+      }
+    }
+  }
+  section#hero {
+    height: 100vh;
+    width: 100vw;
+    background: url("../images/desktop/image-header.jpg") no-repeat;
+    background-size: cover;
+    h1#hero-headline {
+      text-transform: uppercase;
+      font-family: $font-serif;
+      font-weight: 600;
+      color: $white;
+    }
+  }
 }
 
 @media (min-width: $breakpoint-desktop) {
