--- a/style/style.scss
+++ b/style/style.scss
@@ -61,13 +61,20 @@ body {
   section#hero {
     height: 100vh;
     width: 100vw;
-    background: url("../images/desktop/image-header.jpg") no-repeat;
+    background-image: url("../images/desktop/image-header.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
-    h1#hero-headline {
-      text-transform: uppercase;
-      font-family: $font-serif;
-      font-weight: 600;
-      color: $white;
+    background-position: center;
+    #hero-headline {
+      text-align: center;
+      h1 {
+        text-transform: uppercase;
+        font-family: $font-serif;
+        font-weight: 600;
+        letter-spacing: 0.3rem;
+        color: $white;
+        padding: 10vh;
+      }
     }
   }
 }
