--- a/style/style.scss
+++ b/style/style.scss
@@ -5,8 +5,8 @@ $breakpoint-desktop: 1440px;
 $font-sans-serif: "Barlow", sans-serif;
 $font-serif: "Fraunces", serif;
 // primary colours
-$colour-soft-red: hsl(7, 99%, 70%);
-$colour-yellow: hsl(51, 100%, 49%);
+$soft-red: hsl(7, 99%, 70%);
+$yellow: hsl(51, 100%, 49%);
 $dark-desaturated-cyan: hsl(167, 40%, 24%);
 $dark-blue: hsl(198, 62%, 26%);
 $dark-moderate-cyan: hsl(168, 34%, 41%);
@@ -19,6 +19,8 @@ $white: hsl(0, 0%, 100%);
 
 body {
   font-size: 18px;
+  font-family: $font-sans-serif;
+  font-weight: 700;
   nav {
     padding: 15px 20px;
     display: flex;
@@ -75,6 +77,83 @@ body {
         color: $white;
         padding: 10vh;
       }
+    }
+  }
+  section#grid {
+    display: flex;
+    flex-wrap: wrap;
+    .tile {
+      box-sizing: border-box;
+      width: 50vw;
+      height: 80vh;
+      padding: 5%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      & h2,
+      & h3 {
+        font-family: $font-serif;
+        font-weight: 600;
+      }
+      a.underline {
+        text-decoration: none;
+        color: $very-dark-desaturated-blue;
+        text-transform: uppercase;
+        font-family: $font-serif;
+        font-weight: 600;
+        position: relative;
+        z-index: 1;
+        &:after {
+          display: inline-block;
+          position: absolute;
+          border-radius: 15px;
+          content: "";
+          width: 111%;
+          height: 0.8rem;
+          left: -0.4rem;
+          bottom: -0.3rem;
+          z-index: -1;
+        }
+        &.underline-yellow:after {
+          background-color: rgba($yellow, 0.3);
+        }
+        &.underline-pink:after {
+          background-color: rgba($soft-red, 0.3);
+        }
+      }
+      &:nth-of-type(2) {
+        background-image: url("../images/desktop/image-transform.jpg");
+      }
+      &:nth-of-type(3) {
+        background-image: url("../images/desktop/image-stand-out.jpg");
+      }
+      &:nth-of-type(5),
+      &:nth-of-type(6) {
+        display: flex;
+        flex-flow: column;
+        justify-content: flex-end;
+        align-items: center;
+        & h3 {
+          font-size: 1.6rem;
+        }
+        & h3,
+        & p {
+          text-align: center;
+          max-width: 400px;
+        }
+      }
+      &:nth-of-type(5) {
+        background-image: url("../images/desktop/image-graphic-design.jpg");
+        color: $dark-desaturated-cyan;
+      }
+      &:nth-of-type(6) {
+        background-image: url("../images/desktop/image-photography.jpg");
+        color: $dark-blue;
+      }
+    }
+    .tile-white {
+      background-color: $white;
+      color: $very-dark-desaturated-blue;
     }
   }
 }
