--- a/style/style.scss
+++ b/style/style.scss
@@ -28,6 +28,9 @@ body {
     align-items: center;
     #logo {
       width: 20%;
+      path {
+        fill: $white;
+      }
     }
     ul#nav-items {
       width: 80%;
@@ -185,6 +188,45 @@ body {
           }
           p:last-of-type {
             color: $grayish-blue;
+          }
+        }
+      }
+    }
+  }
+  footer {
+    #footer-imgs {
+      display: flex;
+      img {
+        width: 25vw;
+        height: 60vh;
+        object-fit: cover;
+      }
+    }
+    .logo {
+      width: 100%;
+      margin: 50px 0 20px;
+      path {
+        fill: $dark-moderate-cyan;
+      }
+    }
+    .footer-text {
+      background-color: #90d4c5;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      flex-wrap: wrap;
+      ul {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        width: 100%;
+        li {
+          list-style: none;
+          padding: 10px;
+          margin: 10px;
+          a {
+            text-decoration: none;
+            color: $dark-moderate-cyan;
           }
         }
       }
