--- a/style/style.scss
+++ b/style/style.scss
@@ -204,7 +204,7 @@ body {
     }
     .logo {
       width: 100%;
-      margin: 50px 0 20px;
+      margin-bottom: 20px;
       path {
         fill: $dark-moderate-cyan;
       }
@@ -215,6 +215,7 @@ body {
       justify-content: center;
       text-align: center;
       flex-wrap: wrap;
+      padding: 40px 0;
       ul {
         display: flex;
         justify-content: center;
@@ -231,6 +232,10 @@ body {
         }
       }
     }
+  }
+  .attribution {
+    text-align: center;
+    padding: 10px 0;
   }
 }
 
