--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@ body nav ul#nav-items li a.contact-btn:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.3);
   color: white;
+  transition: all 300ms;
 }
 body section#hero {
   height: 100vh;
@@ -102,11 +103,22 @@ body section#grid .tile a.underline:after {
   bottom: -0.3rem;
   z-index: -1;
 }
+body section#grid .tile a.underline:hover {
+  cursor: pointer;
+}
 body section#grid .tile a.underline.underline-yellow:after {
   background-color: rgba(250, 212, 0, 0.3);
+  transition: background-color 400ms;
+}
+body section#grid .tile a.underline.underline-yellow:hover:after {
+  background-color: #fad400;
 }
 body section#grid .tile a.underline.underline-pink:after {
   background-color: rgba(254, 120, 103, 0.3);
+}
+body section#grid .tile a.underline.underline-pink:hover:after {
+  background-color: #fe7867;
+  transition: background-color 400ms;
 }
 body section#grid .tile:nth-of-type(2) {
   background-image: url("../images/desktop/image-transform.jpg");
@@ -206,6 +218,17 @@ body footer .footer-text ul li {
 body footer .footer-text ul li a {
   text-decoration: none;
   color: #458c7e;
+}
+body footer .footer-text ul li a:hover {
+  color: white;
+  transition: color 300ms;
+}
+body footer .footer-text ul li path {
+  fill: #458c7e;
+}
+body footer .footer-text ul li:hover path {
+  fill: white;
+  transition: fill 300ms;
 }
 body .attribution {
   text-align: center;
