--- a/style/style.scss
+++ b/style/style.scss
@@ -61,6 +61,9 @@ body {
             }
           }
         }
+        &#menu-btn {
+          display: none;
+        }
       }
     }
   }
@@ -268,7 +271,15 @@ body {
   body {
     nav {
       ul#nav-items {
-        display: none;
+        li {
+          display: none;
+          &#menu-btn {
+            display: block;
+            &:hover {
+              cursor: pointer;
+            }
+          }
+        }
       }
     }
     section#grid {
@@ -289,6 +300,16 @@ body {
         .testimonial-card {
           width: 100%;
           max-width: 100vw;
+        }
+      }
+    }
+    footer {
+      #footer-imgs {
+        flex-wrap: wrap;
+        img {
+          width: 50vw;
+          height: 50vh;
+          max-height: 300px;
         }
       }
     }
