--- a/style/style.css
+++ b/style/style.css
@@ -273,6 +273,17 @@ body .attribution {
   body nav ul#nav-items li:last-of-type {
     margin-top: 30px;
   }
+  body nav ul#nav-items:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -30px;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-bottom: 30px solid white;
+    border-left: 30px solid transparent;
+  }
   body section#grid {
     display: flex;
     flex-wrap: wrap;
