--- a/style/style.scss
+++ b/style/style.scss
@@ -303,6 +303,17 @@ body {
             margin-top: 30px;
           }
         }
+        &:before {
+          content: "";
+          display: block;
+          position: absolute;
+          top: -30px;
+          right: 0;
+          width: 0;
+          height: 0;
+          border-bottom: 30px solid $white;
+          border-left: 30px solid transparent;
+        }
       }
     }
     section#grid {
